# wk7-mqtt-influx

./: .gitignore  Cargo.toml  FINAL_SUMMARY.md  GRAFANA_DASHBOARD_GUIDE.md  GRAFANA_SETUP_GUIDE.md  MQTT_INFLUX_GUIDE.md  MQTT_TEST_GUIDE.md  NOTES.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  SHT3X_SENSOR_FIX.md  TODO.md  TROUBLESHOOTING.md  WEEK_8_PROGRESS.md  build-firmware.sh  config.toml  config.toml.example  docker-compose.yml  run-gateway.sh  test-grafana-influx.sh  test-mqtt-only.sh  test-mqtt-sub.sh
examples/: test_influxdb_health.rs
firmware/: Cargo.toml
firmware/src/: main.rs
mosquitto/config/: mosquitto.conf
mosquitto/data/: mosquitto.db
src/: config.rs  influxdb.rs  lib.rs  main.rs  mqtt.rs
