[package]
name = "node2-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f446"] }
cortex-m-rtic = "1.1"

# Logging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Bus & Traits
shared-bus = { version = "0.3.1", features = ["cortex-m"] }
embedded-hal = "1.0"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7" }

# Drivers
ssd1306 = "0.8.4"
display-interface-i2c = "0.4"
embedded-graphics = "0.8.1"
bmp280-ehal = "0.0.6"

heapless = "0.8"
nb = "1.1"

# Binary protocol
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0"
crc = "3.0"

[profile.release]
debug = true
lto = true
opt-level = "s"
